<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginPage"
    android:padding="35sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN IN"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verifyMail"
        android:layout_marginTop="130sp"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:hint="@string/enter_mail"
        android:minHeight="50sp"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verifyPassword"
        android:layout_below="@id/verifyMail"
        android:layout_marginTop="60sp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:autofillHints="no"
        android:minHeight="50sp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/verifyUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifyPassword"
        android:layout_marginTop="90sp"
        android:text="@string/SignIn"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUp"
        android:layout_below="@id/verifyUser"
        android:text="SIGN UP" />

</RelativeLayout>